@@ -503,15 +503,15 @@ static  const char *  replies[] = {
 /* 478 ERR_BANLISTFULL, */      ":%s 478 %s %s %s :Channel ban list is full",
 /* 479 ERR_BADCHANNAME */       "%s :Illegal channel name",
 /* 480 ERR_THROTTLE */          ":%s 480 %s %s :Cannot join channel (throttle exceeded)",
-/* 481 ERR_NOPRIVILEGES, */	":Permission Denied - You're not an IRC operator",
-/* 482 ERR_CHANOPRIVSNEEDED, */ ":%s 482 %s %s :You're a not channel operator",
+/* 481 ERR_NOPRIVILEGES, */	":This command is for network staff only.",
+/* 482 ERR_CHANOPRIVSNEEDED, */ ":%s 482 %s %s :You're not a channel operator",
 /* 483 ERR_CANTKILLSERVER, */   ":You can't kill a server!",
 /* 484 ERR_ISCHANSERVICE */     ":%s 484 %s %s %s :Cannot kill, kick or deop a network service",
 /* 485 ERR_BANNEDNICK, */	NULL,
 /* 486 ERR_NONONREG */          "%s :You must log in with services to message this user",
 /* 487 */       NULL,
 /* 488 */       NULL,
-/* 489 ERR_VOICENEEDED */	":%s 489 %s %s :You're neither voiced nor channel operator",
+/* 489 ERR_VOICENEEDED */	":%s 489 %s %s :You're neither voiced nor a channel operator",
 /* 490 */       NULL,
 /* 491 ERR_NOOPERHOST, */       ":%s 491 %s :Only few of mere mortals may try to enter the twilight zone",
 /* 492 */       NULL,
