@@ -327,26 +327,25 @@ struct oper_flags
 };
 struct oper_flags oper_flagtable[] =
 {
-	{ OPER_OVERRIDE,	'O', 'o' },
-	{ OPER_KLINE,		'K', 'k' },
-	{ OPER_XLINE,		'X', 'x' },
-	{ OPER_RESV,		'Q', 'q' },
-	{ OPER_KILL,		'C', 'c' },
-	{ OPER_ROUTING,		'R', 'r' },
-	{ OPER_UNKLINE,		'U', 'u' },
-	{ OPER_REHASH,		'H', 'h' },
-	{ OPER_DIE,		'D', 'd' },
 	{ OPER_ADMIN,		'A', 'a' },
-	{ OPER_MASSNOTICE,	'N', 'n' },
-	{ OPER_OPERWALL,	'L', 'l' },
-	{ OPER_AUSPEX,		'S', 's' },
-	{ OPER_INVIS,		'P', 'p' },
-	{ OPER_HELPER,		'T', 't' },
-	{ OPER_CMODES,		'M', 'm' },
-	{ OPER_IMMUNE,		'I', 'i' },
-	{ OPER_WALLOPS,		'W', 'w' },
+	{ OPER_KILL,		'C', 'c' },
+	{ OPER_DIE,		'D', 'd' },
 	{ OPER_EXPERIMENTAL,	'E', 'e' },
 	{ OPER_GRANT,		'G', 'g' },
+	{ OPER_REHASH,		'H', 'h' },
+	{ OPER_IMMUNE,		'I', 'i' },
+	{ OPER_KLINE,		'K', 'k' },
+	{ OPER_OPERWALL,	'L', 'l' },
+	{ OPER_CMODES,		'M', 'm' },
+	{ OPER_MASSNOTICE,	'N', 'n' },
+	{ OPER_OVERRIDE,	'O', 'o' },
+	{ OPER_RESV,		'Q', 'q' },
+	{ OPER_ROUTING,		'R', 'r' },
+	{ OPER_AUSPEX,		'S', 's' },
+	{ OPER_HELPER,		'T', 't' },
+	{ OPER_UNKLINE,		'U', 'u' },
+	{ OPER_XLINE,		'X', 'x' },
+	{ OPER_WALLOPS,		'W', 'w' },
 	{ 0,			'\0', '\0' }
 };
 
